gcc/testsuite/rust/rustc/ui/issues/issue-16966.rs
fn main() {
    panic!(std::default::Default::default());
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

